@@ -1,3 +1,6 @@
+Mon Dec 17 22:18:17 CST 2001 Linas Vepstas <linas@linas.org>
+
+	* timer.c: failed to redraw main window when clock ticks!
 
 Mon Dec 10 10:48:28 CST 2001 Linas Vepstas <linas@linas.org>
 
